...
      visible={snackbar.visible}
      onDismiss={dismissSnackbar}
      duration={2000}
      style={
        snackbar.isError ? { backgroundColor: theme.colors.error } : undefined
      }
      testID={snackbar.isError ? "errorSnackbar" : "successSnackbar"}
    >
      {snackbar.message}
    </Snackbar>
  );
}

