...
  onRefresh,
}: AgendaListProps) {
  const theme = useTheme();

  return (
    <SectionList<AgendaListItem>
      testID="agendaList"
      sections={sections}
      keyExtractor={(item) =>
        "type" in item && item.type === "category-header"
          ? `header-${item.category}`
          : getTodoKey(item as AgendaEntry)
      }
...
